# rust-mrpir

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  mrpir.service
.github/workflows/: rust.yml
src/: app.rs  config.rs  config_test.rs  error.rs  main.rs  time_events.rs
src/mqtt/: client.rs  discovery.rs  mod.rs
src/screen/: brightness_ctrl.rs  mod.rs  wayland.rs
src/sensor/: mod.rs
tests/: config_loading.rs  mqtt_discovery.rs  time_events.rs
