[package]
name = "mrpir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
paho-mqtt = "0.12"
pir-motion-sensor = "2.0.2"
sd-notify = "0.4.1"
thiserror = "1.0.44"
tokio = "1.29.1"
tokio-util = "0.7.8"
