[package]
name = "mrpir"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Michael Regan"]
description = "Motion-activated screen control for Raspberry Pi with MQTT/Home Assistant integration"
license = "MIT"
repository = "https://github.com/MichaelRegan/rust-mrpir"
keywords = ["raspberry-pi", "mqtt", "home-assistant", "pir", "iot"]
categories = ["hardware-support", "embedded"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "process", "fs"] }
tokio-util = "0.7"

# MQTT (pure Rust, async-native)
rumqttc = "0.24"

# GPIO for Raspberry Pi
rppal = "0.22"

# Configuration (TOML + env var layering)
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform info
hostname = "0.4"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Systemd integration
sd-notify = "0.4"

# Screen brightness control (sysfs-based, default)
brightness = { version = "0.5", optional = true }
futures-util = { version = "0.3", optional = true }

# Wayland screen control (optional)
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }

# Time/date handling and sunrise/sunset
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Error handling
thiserror = "2"
anyhow = "1"

[features]
default = ["brightness-control"]
brightness-control = ["brightness", "futures-util"]
wayland-control = ["wayland-client", "wayland-protocols-wlr"]

[dev-dependencies]
tempfile = "3"
toml = "0.8"
serde_json = "1"
flume = "0.11"

[profile.release]
lto = true
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

